--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -2,9 +2,9 @@
 <resources>
     <declare-styleable name="CustomIndicatorView">
         <attr name="indicator_count" format="integer"></attr>
-        <attr name="indicator" format="dimension"></attr>
+        <attr name="indicator_radius" format="dimension"></attr>
         <attr name="indicator_color" format="color"></attr>
-        <attr name="indicator_backgroud_color" format="color"></attr>
+        <attr name="indicator_background_color" format="color"></attr>
     </declare-styleable>
 
 </resources>
